--- a/index.html
+++ b/index.html
@@ -108,12 +108,24 @@
           </div>
           <div class="col-sm-7 col-md-8 col-lg-8 mt-5">
             <header>
+              <h2>Business Analyst Intern</h2>
+              <p> Tencent Technology (Beijing) Co., Ltd, <i>Qidian Product Department</i> <br> <i class="italic-time">June 2024 - September 2024</i></p>
+              <p>
+                <li>Participated in the optimization of the Customer Data Platform (CDP) and Marketing Automation Platform (MA) for Qidian Marketing Cloud, a B2B SaaS Intelligent Marketing Platform</li>
+                <li>Crafted interview outlines, performed needs analysis, and synthesized findings into requirement documentation</li>
+                <li>Developed and maintained insight dashboards with SQL & Tableau to monitor user behavior metrics and performance trends</li>
+                <li>Led User Acceptance Testing (UAT) with R&D team, documented technical requirements, and updated product documentation</li>
+              </p>
+            </header>
+            <br><hr /><br>
+
+            <header>
               <h2>Large Language Model Data Intern</h2>
               <p>Fourth Paradigm Technology Co., Ltd.<br> <i class="italic-time">June 2023 - September 2023</i></p>
               <p>
-                <li>Performed data cleaning on large-scale unstructured data, including Zhihu articles, Toutiao articles, etc., by using python, and obtained 923G data</li>
-                <li>Evaluated various indicators and characteristics of cleaned corpus data, completed over 45 evaluation reports of tens of thousands of data, and improved average accuracy by ~22% after optimization </li>
-                <li>Developed 2000+ prompts, and originated corresponding answers for supervised fine-tuning (SFT) model training</li>
+                <li>Compiled and summarized text data characteristics from social media platforms such as Xiaohongshu, Zhihu, and Toutiao, and performed large-scale unstructured data cleaning of 923 GB using Python</li>
+                <li>Conducted sampling evaluations on the cleaned corpus, producing 45+ reports, improving accuracy by ~22% through optimization </li>
+                <li>Constructed JSON templates for Q&A tasks including text summarization, sentiment analysis, information extraction, and created 2,000+ manually crafted prompts and answers for supervised fine-tuning</li>
               </p>
             </header>
             <br><hr /><br>
