--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p> Hi there, I am <span class="intro-effect">Yishan Cai(蔡依珊)</span>. I am currently pursuing a double major in Data Science and Math - Probability & Statistics at UC San Diego, set to graduate in June 2025. My academic journey has been shaped by a profound passion for understanding patterns, extracting insights, and deriving meaning from data. I am actively seeking roles in <span class="intro-effect">data analysis</span> and <span class="intro-effect">machine learning</span> that align with my skills and aspirations. </p>
             <p> I am always eager to embrace new challenges and connect with diverse perspectives. If you're interested in collaborating or simply want to discuss data science, art, or adventures, feel free to contact me at <a href="mailto:yic075@ucsd.edu" class="intro-effect">yic075@ucsd.edu</a>. Let's create something amazing together! </p>
             <p> I enjoy painting and playing the pipa, and I'm a fan of travel and photography. </p>
-            <p> View my <a href="data\YishanCai_Resume.pdf" target="_blank" class="intro-effect">résumé</a> (updated in May. 2024) </p>
+            <p> View my <a href="data/YC_full.pdf" target="_blank" class="intro-effect">résumé</a> (updated in May. 2024) </p>
           </div>
           <div class="col-sm-7 col-md-6 col-lg-5 mt-5">
             <img class="img-responsive" src="images\home_img0.jpg">
@@ -111,7 +111,7 @@
               <h2>Business Analyst Intern</h2>
               <p> Tencent Technology (Beijing) Co., Ltd, <i>Qidian Product Department</i> <br> <i class="italic-time">June 2024 - September 2024</i></p>
               <p>
-                <li>Participated in the optimization of the Customer Data Platform (CDP) and Marketing Automation Platform (MA) for Qidian Marketing Cloud, a B2B SaaS Intelligent Marketing Platform</li>
+                <li>Participated in the optimization of the Customer Data Platform (CDP) and Marketing Automation Platform (MA) for <a href="https://qidian.qq.com/" target="_blank" class="intro-effect">Qidian Marketing Cloud</a>, a B2B SaaS Intelligent Marketing Platform</li>
                 <li>Crafted interview outlines, performed needs analysis, and synthesized findings into requirement documentation</li>
                 <li>Developed and maintained insight dashboards with SQL & Tableau to monitor user behavior metrics and performance trends</li>
                 <li>Led User Acceptance Testing (UAT) with R&D team, documented technical requirements, and updated product documentation</li>
