change container of overlay

--- a/index.html
+++ b/index.html
@@ -60,11 +60,20 @@
     </nav>
 
     <!-- open image -->
-    <img src="images\open_bg.jpg" alt="Full Page Image" class="full-page-image">
-    <div class="overlay">
-      <h1>I'm Yishan Cai</h1>
-      <p><span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+    <!--<img src="images\open_bg.jpg" alt="Full Page Image" class="full-page-image">
+      <div class="overlay">
+        <h1>I'm Yishan Cai</h1>
+        <p><span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+      </div>-->
+
+    <div style="position: relative;">
+      <img src="images\open_bg.jpg" alt="Full Page Image" class="full-page-image">
+      <div class="overlay">
+        <h1>I'm Yishan Cai</h1>
+        <p><span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+      </div>
     </div>
+    <br><br><br><br><br><br>
 
     <div class="container">
       <div class="container-fluid">
